    similar lines. Based on a patch by Thorsten Glaser <tg@mirbsd.de>.
  * Modify dpkg-gencontrol and dpkg-distaddfile to grab a write lock
    on debian/control before updating debian/files to avoid simultaneous
    updates. Closes: #642608
    Add libfile-fcntllock-perl to dpkg-dev's Depends since we use this module
    to handle the locking.

  [ Jonathan Nieder ]
  * Bump po4a version in Build-Depends to 0.41, since earlier versions do
    not handle --srcdir correctly. Closes: #644370

  [ Updated dpkg translations ]
  * German (Sven Joachim).
  * Italian (Milo Casagrande). Closes: #627832
  * Swedish (Peter Krefting).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).
  * Spanish (Omar Campagne). Closes: #636238
  * Swedish (Peter Krefting).

  [ Updated man page translations ]
  * German (Helge Kreutzmann), and typo fix in dpkg-genchanges. Closes: #646496
  * Japanese (TAKAHASHI Motonobu).
  * Spanish (Omar Campagne). Closes: #643969
  * Swedish (Peter Krefting).

 -- Helge Kreutzmann <debian@helgefjell.de>  Fri, 23 Sep 2011 17:29:38 +0200

dpkg (1.16.1.1) unstable; urgency=low

  [ Raphaël Hertzog ]
  * Fix dpkg-source to not ignore the automatic patch when checking
    for unrecorded changes. Closes: #643148
  * Let dpkg-source --commit create debian/patches when required.
    Closes: #643037
  * Fix dpkg-buildflags --dump to return 0 as exit code and not 1.
  * Update dpkg-buildflags(1) to not include quotes in the examples
    setting DEB_BUILD_MAINT_OPTIONS.
  * Stop outputting build flags in dpkg-buildpackage as it confuses
    maintainers who are overriding them in debian/rules and who
    are not seeing the expected value in the build log.
  * Fix trigger setup code to not reset the status of packages
    when they are in a status different from triggers-awaited,
    triggers-pending or installed. Closes: #644492
  * Fix dpkg-source to ignore changes on debian/patches/.dpkg-source-applied