@@ -45,6 +45,9 @@ dpkg (1.16.2) UNRELEASED; urgency=low
     updates. Closes: #642608
     Add libfile-fcntllock-perl to dpkg-dev's Depends since we use this module
     to handle the locking.
+  * Update dpkg-gensymbols(1) to clarify that -e accepts shell patterns
+    expansions and not regular expressions. And let dpkg-gensymbols output a
+    warning when a pattern doesn't match any file. Closes: #649248
 
   [ Jonathan Nieder ]
   * Bump po4a version in Build-Depends to 0.41, since earlier versions do
